--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"Width": 1920, "Height": 1080, "GameIconSizePx": 100, "UIIconSizePx": 20, "theme": "Dark", "loadicons": 1, "resumefont": 15, "openLinks": 1}
+{"Width": 1920, "Height": 1080, "GameIconSizePx": 100, "UIIconSizePx": 20, "theme": "Dark", "loadicons": 1, "resumefont": 15, "openLinks": 1, "semiAutoMode": 1, "adBlock": 1}
