--- a/config.json
+++ b/config.json
@@ -1,20 +1,1 @@
-{
-  "General": {
-    "Width": 1920,
-    "Height": 1080,
-    "GameIconSizePx": 100,
-    "UIIconSizePx": 20,
-    "theme": "Dark",
-    "resumefont": 15,
-    "loadicons": 1,
-    "openLinks": 0
-  },
-  "NXBrew": {
-    "isEnabled": 1,
-    "semiAutoMode": 0,
-    "adBlock": 1
-  },
-  "TemplateModule": {
-    "isEnabled": 1
-  }
-}
+{"General": {"Width": 1920, "Height": 1080, "GameIconSizePx": 100, "UIIconSizePx": 20, "theme": "Dark", "resumefont": 15, "loadicons": 1, "openLinks": 0}, "NXBrew": {"isEnabled": 1, "semiAutoMode": 0, "adBlock": 1}, "WowRoms": {"isEnabled": 1, "platform": 26, "timeout": 10}}
